tests/parsing/const_redefinition_in_inst/stderr.golden
error: redefinition of constant 'a', first definition line 2 column 8
bus.fbd +3:8
   |
 3 | 	const a = 2
   | 	      ^
bus.fbd +2:8
   |
 2 | 	const a = 1
   | 	      ^
